--- a/LSH.ipynb
+++ b/LSH.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,30 +30,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inthe interest of memory conservation (only stoing non-zero elements) and efficient rearrangement, we store the data as ones in indicies according to their user ID (column) and rated movies (rows, 1 if rated 0 if not) "
+    "### Shingling\n",
+    "In the interest of memory conservation (only stoing non-zero elements) and efficient rearrangement, we store the data as ones in indicies according to their user ID (column) and rated movies (rows, 1 if rated 0 if not) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse import csc_matrix\n",
-    "users_movies = csc_matrix((np.ones(len(data_origin)), (data_origin[:,0], data_origin[:,1])), shape=(np.max(data_origin[:,0])+1, np.max(data_origin[:,1])+1)).toarray()"
+    "users_movies = csc_matrix((np.ones(len(data_origin)), (data_origin[:,1], data_origin[:,0])), shape=(np.max(data_origin[:,1])+1, np.max(data_origin[:,0])+1)).toarray()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Matrix Definition\n",
-    "Next we define general parameters (so they are in one place and easy to alter), including the length of signatures, the number of bands, and the numbers of rows (ie, the number of signature permutations)"
+    "### Signature Matrix\n",
+    "Now we create a random permutations of movie indicies and rearrange our matrix to match. The first non-zero element in the new arrangement will be an element in the user's signature. We will start using 100 permutations, so that our signatures for each user are of length 100."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signature_length = 100\n",
+    "signature_matrix = np.zeros((signature_length, users_movies.shape[1]))\n",
+    "permutation_indicies = np.arange(len(users_movies))\n",
+    "users_movies_copy = np.copy(users_movies)\n",
+    "for i in range(signature_length):\n",
+    "    np.random.shuffle(permutation_indicies)\n",
+    "    users_movies_copy = users_movies_copy[permutation_indicies,:]\n",
+    "    signature_matrix[i,:]= (users_movies_copy!=0).argmax(axis=0)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Partition Into Bands\n",
+    "Next we cut the signature matrix into 5 bands (to start),"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -65,10 +91,8 @@
     }
    ],
    "source": [
-    "signature_length = 100\n",
     "bands = 5\n",
-    "rows = 100\n",
-    "print('Each of the', bands, 'bands will contain', int(rows/bands), 'signature permutations')"
+    "print('Each of the', bands, 'bands will contain', int(signature_length/bands), 'signature permutations')"
    ]
   },
   {
