To do: Make sim matrix calc fast

--- a/LSH.ipynb
+++ b/LSH.ipynb
@@ -79,20 +79,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Each of the 5 bands will contain 20 signature permutations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bands = 5\n",
-    "print('Each of the', bands, 'bands will contain', int(signature_length/bands), 'signature permutations')"
+    "bands = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = np.array([0, 2, 2, 0, 1, 2])\n",
+    "col = np.array([0, 0, 1, 2, 2, 2])\n",
+    "data = np.array([1, 2, 3, 4, 5, 6])\n",
+    "A = csc_matrix((data, (row, col)), shape=(len(row), len(col))).toarray()\n",
+    "print(A)\n",
+    "x = np.arange(len(row))\n",
+    "np.random.shuffle(x)\n",
+    "print(x)\n",
+    "B = A[x,:]\n",
+    "print(B)\n",
+    "A[0,:] = (B!=0).argmax(axis=0)\n",
+    "print(A)"
    ]
   },
   {
