Error in Sigmatrix

--- a/LSH.ipynb
+++ b/LSH.ipynb
@@ -64,7 +64,7 @@
     "users_movies_copy = np.copy(users_movies)\n",
     "for i in range(signature_length):\n",
     "    np.random.shuffle(permutation_indicies)\n",
-    "    users_movies_copy = users_movies_copy[permutation_indicies,:]\n",
+    "    users_movies_copy = users_movies[permutation_indicies,:]\n",
     "    signature_matrix[i,:]= (users_movies_copy!=0).argmax(axis=0)\n",
     "    \n"
    ]
