Error in Sigmatrix

--- a/LSH.ipynb
+++ b/LSH.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse import csc_matrix\n",
-    "users_movies = csc_matrix((np.ones(len(data_origin)), (data_origin[:,1], data_origin[:,0])), shape=(np.max(data_origin[:,1])+1, np.max(data_origin[:,0])+1)).toarray()"
+    "users_movies = csc_matrix((np.ones(len(data_origin)), (data_origin[:,1], data_origin[:,0])), shape=(np.max(data_origin[:,1])+1, np.max(data_origin[:,0])+1))"
    ]
   },
   {
@@ -58,15 +58,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signature_length = 100\n",
-    "signature_matrix = np.zeros((signature_length, users_movies.shape[1]))\n",
-    "permutation_indicies = np.arange(len(users_movies))\n",
+    "import time\n",
+    "tic = time.clock()\n",
+    "signature_length = 10\n",
+    "signature_matrix = np.zeros((signature_length, np.max(data_origin[:,0])+1))\n",
+    "permutation_indicies = np.arange(np.max(data_origin[:,1])+1)\n",
     "users_movies_copy = np.copy(users_movies)\n",
     "for i in range(signature_length):\n",
     "    np.random.shuffle(permutation_indicies)\n",
     "    users_movies_copy = users_movies[permutation_indicies,:]\n",
     "    signature_matrix[i,:]= (users_movies_copy!=0).argmax(axis=0)\n",
-    "    \n"
+    "toc = time.clock()\n",
+    "print('Gee-whiz, it only took', int(toc - tic), 'seconds to make the signature matrix!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's test to make sure we made our signture matrix correctly. For the last signature in the matrix for the first user, is the index actually the first non-zero entry in the permutation_indicies arrangement?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in permutation_indicies[1+np.arange(int(signature_matrix[signature_length-1,0]))]:\n",
+    "    print('Index:', j, ', Entry:', users_movies[j,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yep, that is indeed the first non-zero entry in this ordering!"
    ]
   },
   {
@@ -84,26 +111,6 @@
    "outputs": [],
    "source": [
     "bands = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row = np.array([0, 2, 2, 0, 1, 2])\n",
-    "col = np.array([0, 0, 1, 2, 2, 2])\n",
-    "data = np.array([1, 2, 3, 4, 5, 6])\n",
-    "A = csc_matrix((data, (row, col)), shape=(len(row), len(col))).toarray()\n",
-    "print(A)\n",
-    "x = np.arange(len(row))\n",
-    "np.random.shuffle(x)\n",
-    "print(x)\n",
-    "B = A[x,:]\n",
-    "print(B)\n",
-    "A[0,:] = (B!=0).argmax(axis=0)\n",
-    "print(A)"
    ]
   },
   {
