modified:   LSH.ipynb 	modified:   naive.ipynb

--- a/naive.ipynb
+++ b/naive.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading time =  0.25049805641174316 sec\n"
+      "loading time =  0.22000908851623535 sec\n"
      ]
     }
    ],
@@ -185,6 +185,26 @@
     "op_factor = opertaions_toal / opertaions_1p\n",
     "total_time = loading_time + list_time * 100. + simi_time * op_factor    # Add them up\n",
     "print('Total time = ', total_time / 60. / 60. / 24., ' d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88845"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(data_origin[:,1])*5"
    ]
   },
   {
