--- a/LSH.ipynb
+++ b/LSH.ipynb
@@ -4,49 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AiDM Assignment 2\n",
+    "# AiDM Assignment 2 Group 81\n",
+    "### Meng Yao (yao@strw.leidenuniv.nl) and Michael Keim (keim@strw.leidenuniv.nl)\n",
     "##  Locality Sensitive Hashing for Netflix Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import time\n",
     "import os\n",
-    "start = time.time()"
+    "start = time.time()\n",
+    "np.random.seed(seed=17)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Load Data\n",
-    "First we read in the data"
+    "Later on in our code we will need to be able to calculate similarities. Here is where we define functions to do so"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_origin = np.load('../user_movie.npy')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We show the function for calculating the similarities between users here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,13 +72,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Shingling\n",
-    "In the interest of memory conservation (only stoing non-zero elements) and efficient rearrangement, we store the data as ones in indicies according to their user ID (column) and rated movies (rows, 1 if rated 0 if not) "
+    "###  Load Data\n",
+    "First we read in the data of users (column 1) and the movies they rated (column 2)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_origin = np.load('../user_movie.npy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shingling\n",
+    "In the interest of memory conservation (only stoing non-zero elements) and efficient rearrangement, we store the data as ones in indicies according to their user ID (column) and rated movies (rows, 1 if rated 0 if not). This is so that it will be easy to tell which users rated the same movies using LSH."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,34 +108,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Signature Matrix\n",
-    "Now we create a random permutations of movie indicies and rearrange our matrix to match. The first non-zero element in the new arrangement will be an element in the user's signature. We will start using 100 permutations, so that our signatures for each user are of length 100."
+    "In the next step we will need to find the first nonzero entry for every column in this sparse matrix (re-arranged). Let's see what this is for the first user in the original arrangement."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gee-whiz, it only took 441 seconds to make the signature matrix!\n"
+      "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 "
      ]
     }
    ],
    "source": [
+    "first_nonzero = np.array((users_movies!=0).argmax(axis=0))[0]\n",
+    "# Now test for the first user\n",
+    "for i in range(first_nonzero[0]+1):\n",
+    "    print(int(users_movies[i,0]), end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Signature Matrix\n",
+    "Now we create a random permutations of movie indicies and rearrange our matrix to match. The first non-zero element in the new arrangement will be an element in the user's signature. We will start using 70 permutations, so that our signatures for each user are of length 70."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tic = time.time()\n",
-    "signature_length = 100\n",
+    "signature_length = 70\n",
     "signature_matrix = np.zeros((signature_length, np.max(data_origin[:,0])+1))\n",
     "permutation_indicies = np.arange(np.max(data_origin[:,1])+1)\n",
+    "# We create a copy of the sparse matrix which we will re-arrange\n",
     "users_movies_copy = np.copy(users_movies)\n",
     "for i in range(signature_length):\n",
+    "    # We shuffle the permutations, thereby creating new hash functions\n",
     "    np.random.shuffle(permutation_indicies)\n",
+    "    # We re-arrange the copy\n",
     "    users_movies_copy = users_movies[permutation_indicies,:]\n",
-    "    signature_matrix[i,:]= (users_movies_copy!=0).argmax(axis=0)\n",
-    "print('Gee-whiz, it only took', int(time.time() - tic), 'seconds to make the signature matrix!')"
+    "    # We find the first non-zero entry\n",
+    "    signature_matrix[i,:] = (users_movies_copy!=0).argmax(axis=0)\n",
+    "print('It took', int(time.time() - tic), 'seconds to make the signature matrix.')"
    ]
   },
   {
@@ -145,66 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index: 13214 , Entry: 0.0\n",
-      "Index: 13870 , Entry: 0.0\n",
-      "Index: 3710 , Entry: 0.0\n",
-      "Index: 12122 , Entry: 0.0\n",
-      "Index: 14324 , Entry: 0.0\n",
-      "Index: 4429 , Entry: 0.0\n",
-      "Index: 6805 , Entry: 0.0\n",
-      "Index: 13880 , Entry: 0.0\n",
-      "Index: 16174 , Entry: 0.0\n",
-      "Index: 443 , Entry: 0.0\n",
-      "Index: 12359 , Entry: 0.0\n",
-      "Index: 7609 , Entry: 0.0\n",
-      "Index: 4380 , Entry: 0.0\n",
-      "Index: 11166 , Entry: 0.0\n",
-      "Index: 14250 , Entry: 0.0\n",
-      "Index: 5464 , Entry: 0.0\n",
-      "Index: 15098 , Entry: 0.0\n",
-      "Index: 8783 , Entry: 0.0\n",
-      "Index: 15590 , Entry: 0.0\n",
-      "Index: 9070 , Entry: 0.0\n",
-      "Index: 8070 , Entry: 0.0\n",
-      "Index: 14933 , Entry: 0.0\n",
-      "Index: 6842 , Entry: 0.0\n",
-      "Index: 14778 , Entry: 0.0\n",
-      "Index: 8153 , Entry: 0.0\n",
-      "Index: 9926 , Entry: 0.0\n",
-      "Index: 622 , Entry: 0.0\n",
-      "Index: 12261 , Entry: 0.0\n",
-      "Index: 16106 , Entry: 0.0\n",
-      "Index: 8025 , Entry: 0.0\n",
-      "Index: 13845 , Entry: 0.0\n",
-      "Index: 8043 , Entry: 0.0\n",
-      "Index: 1 , Entry: 0.0\n",
-      "Index: 8359 , Entry: 0.0\n",
-      "Index: 10141 , Entry: 0.0\n",
-      "Index: 11078 , Entry: 0.0\n",
-      "Index: 12798 , Entry: 0.0\n",
-      "Index: 3001 , Entry: 0.0\n",
-      "Index: 6066 , Entry: 0.0\n",
-      "Index: 423 , Entry: 0.0\n",
-      "Index: 15507 , Entry: 0.0\n",
-      "Index: 15185 , Entry: 0.0\n",
-      "Index: 15937 , Entry: 0.0\n",
-      "Index: 4909 , Entry: 0.0\n",
-      "Index: 10526 , Entry: 0.0\n",
-      "Index: 9068 , Entry: 0.0\n",
-      "Index: 7761 , Entry: 1.0\n"
+      "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 "
      ]
     }
    ],
    "source": [
     "for j in permutation_indicies[1+np.arange(int(signature_matrix[signature_length-1,0]))]:\n",
-    "    print('Index:', j, ', Entry:', users_movies[j,0])"
+    "    print(int(users_movies[j,0]), end=' ')"
    ]
   },
   {
@@ -224,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,19 +252,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 10)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-47-6c6c9f97b9ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcandidates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhash_to_bucket\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m25\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig_M\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msignature_matrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msimilar_users\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0msimilarities\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mpairs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbucket_to_simi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcandidates\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'results.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-46-03d566219a38>\u001b[0m in \u001b[0;36mhash_to_bucket\u001b[0;34m(bands, sig_M)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbands\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig_M\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m             \u001b[0mhash_wsum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig_M\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m             \u001b[0mcandidate_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhash_wsum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mcandidates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcandidate_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    f.write('%s,%s\\n' % (item[0],item[1]))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
@@ -305,20 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "79803"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(pairs)"
    ]
@@ -387,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
